[package]
name = "ssd1351"
version = "0.2.0"
authors = ["Florent Mazzone"]
edition = "2018"

[dependencies]
display-interface = "0.4"
embedded-graphics = "0.7"
embedded-hal = "0.2"
chrono="0.4"
simple-signal="1"

#[dev-dependencies]
rppal = { version = "0.12", features = [ "hal" ] }
#embedded-graphics = "0.6.2"
display-interface-spi = "0.4.0"
linux-embedded-hal = "0.3.0"

